[ja] update, including translation, srx splitter and more tests

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ja.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ja.properties
@@ -1,214 +1,260 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = \u81EA\u52D5\u3067\u8A00\u8A9E\u3092\u691C\u51FA
 
-ast = Asturian
+ast = \u30A2\u30B9\u30C8\u30A5\u30EA\u30A2\u30B9\u8A9E
 
-be = Belarusian
+be = \u30D9\u30E9\u30EB\u30FC\u30B7\u8A9E
 
-br = Breton
+br = \u30D6\u30EB\u30C8\u30F3\u8A9E
 
-ca = Catalan
+ca = \u30AB\u30BF\u30ED\u30CB\u30A2\u8A9E
 
-category_case = Capitalization
+category_case = \u5927\u6587\u5B57\u5316
 
-category_false_friend = False friends
+category_false_friend = \u7A7A\u4F3C\u8A00\u8449
 
-category_grammar = Grammar
+category_grammar = \u6587\u6CD5
 
-category_misc = Miscellaneous
+category_misc = \u305D\u306E\u4ED6
 
-category_typo = Possible Typo
+category_typo = \u53EF\u80FD\u6027\u306E\u3042\u308B\u8AA4\u5B57
 
-checkDone = Check done, {0} potential problems found
+checkDone = \u6F5C\u5728\u7684\u306A\u554F\u984C\u306E\u767A\u898B: {0} (\u6642\u9593: {1}ms)
 
-checkText = &Check Text
+checkText = &\u30C6\u30AD\u30B9\u30C8\u306E\u30C1\u30A7\u30C3\u30AF
 
-correctionMessage = Correction:
+correctionMessage = \u8A02\u6B63:
 
-cs = Czech
+cs = \u30C1\u30A7\u30B3\u8A9E
 
-da = Danish
+da = \u30C7\u30F3\u30DE\u30FC\u30AF\u8A9E
 
-de = German
+de = \u30C9\u30A4\u30C4\u8A9E
 
-desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
+de-DE = \u30C9\u30A4\u30C4\u8A9E (\u30C9\u30A4\u30C4)
 
-desc_double_punct = Use of two consecutive dots or commas
+de-AT = \u30C9\u30A4\u30C4\u8A9E (\u30AA\u30FC\u30B9\u30C8\u30EA\u30A2)
 
-desc_repetition = Word repetition (e.g. 'will will')
+de-CH = \u30C9\u30A4\u30C4\u8A9E (\u30B9\u30A4\u30B9)
 
-desc_repetition_short = Word repetition
+# deactivate rule with one click (stand-alone GUI):
+deactivateRule = (\u7121\u52B9\u5316)
 
-desc_repetition_beginning = Successive sentences beginning with the same word
+# information about which rules are currently de-activated (stand-alone GUI):
+deactivatedRulesText = <br>\u7121\u52B9\u5316\u3057\u305F\u30EB\u30FC\u30EB - \u518D\u3073\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u6709\u52B9\u5316\u3059\u308B:
 
-desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_comma_whitespace = \u30B3\u30F3\u30DE\u306E\u524D\u3068\u62EC\u5F27\u306E\u524D\u5F8C\u306E\u7A7A\u767D\u306E\u4F7F\u7528
 
-desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_double_punct = \uFF12\u3064\u306E\u9023\u7D9A\u3057\u305F\u30C9\u30C3\u30C8\u307E\u305F\u306F\u30B3\u30F3\u30DE\u306E\u4F7F\u7528
 
-desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition = \u5358\u8A9E\u53CD\u5FA9 (\u4F8B 'will will')
 
-desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
+desc_repetition_short = \u5358\u8A9E\u53CD\u5FA9
 
-desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
+desc_repetition_beginning = \u540C\u3058\u5358\u8A9E\u3067\u59CB\u307E\u308B\u9023\u7D9A\u3057\u305F\u6587
 
-desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_repetition_beginning_word = \u540C\u3058\u5358\u8A9E\u3067\u59CB\u307E\u308B\uFF13\u9023\u7D9A\u3057\u305F\u6587
 
-double_dots_short = Two consecutive dots
+desc_repetition_beginning_adv = \u540C\u3058\u526F\u8A5E\u3067\u59CB\u307E\u308B\uFF12\u9023\u7D9A\u3057\u305F\u6587
 
-double_commas_short = Two consecutive comma
+desc_repetition_beginning_thesaurus = \u985E\u7FA9\u8A9E\u3092\u898B\u3064\u3051\u308B\u305F\u3081\u306B\u6587\u3092\u66F8\u304D\u63DB\u3048\u308B\u307E\u305F\u306F\u30B7\u30BD\u30FC\u30E9\u30B9\u3092\u4F7F\u7528\u3059\u308B
 
-en = English
+desc_unpaired_brackets = \u5BFE\u306B\u306A\u3063\u3066\u3044\u306A\u3044\u62EC\u5F27\u3001\u5F15\u7528\u7B26\u3068\u305D\u308C\u3089\u306B\u985E\u4F3C\u3057\u305F\u8A18\u53F7
 
-enterText = Please type or paste text to check in the top area
+desc_uppercase_sentence = \u6587\u304C\u5927\u6587\u5B57\u3067\u59CB\u307E\u3063\u3066\u3044\u308B\u304B\u306E\u30C1\u30A7\u30C3\u30AF
 
-enterText2 = Please insert text to check here
+desc_whitespacerepetition = \u7A7A\u767D\u306E\u7E70\u308A\u8FD4\u3057 (\u60AA\u3044\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8)
 
-eo = Esperanto
+desc_spelling = \u53EF\u80FD\u6027\u306E\u3042\u308B\u3064\u3065\u308A\u306E\u9593\u9055\u3044
 
-errorContext = Context:
+desc_spelling_short = \u3064\u3065\u308A\u306E\u9593\u9055\u3044
 
-errorMessage = Message:
+double_dots_short = \u9023\u7D9A\u3059\u308B\uFF12\u3064\u306E\u30C9\u30C3\u30C8
 
-es = Spanish
+double_commas_short = \u9023\u7D9A\u3059\u308B\uFF12\u3064\u306E\u30B3\u30F3\u30DE
 
-false_friend = False friend
+el = \u30AE\u30EA\u30B7\u30E3\u8A9E
 
-false_friend_desc = false friend hint for:
+en = \u82F1\u8A9E
 
-false_friend_hint = Hint: "{0}" ({1}) means {2} ({3}).
+en-AU = \u82F1\u8A9E (\u30AA\u30FC\u30B9\u30C8\u30E9\u30EA\u30A2)
 
-false_friend_suggestion = Did you mean {0}?
+en-GB = \u82F1\u8A9E (\u82F1\u56FD)
 
-fr = French
+en-US = \u82F1\u8A9E (\u30A2\u30E1\u30EA\u30AB)
 
-gl = Galician
+en-CA = \u82F1\u8A9E (\u30AB\u30CA\u30C0)
 
-guiAddButton=Add...
-guiCancelButton = Cancel
+en-NZ = \u82F1\u8A9E (\u30CB\u30E5\u30FC\u30B8\u30FC\u30E9\u30F3\u30C9)
 
-guiCheckComplete = LanguageTool check is complete.
-guiCloseButton=Close
+en-ZA = \u82F1\u8A9E (\u5357\u30A2\u30D5\u30EA\u30AB)
 
-guiConfigWindowTitle = LanguageTool Options
+enterText = \u4E0A\u90E8\u306E\u30A8\u30EA\u30A2\u306B\u30C1\u30A7\u30C3\u30AF\u3059\u308B\u30C6\u30AD\u30B9\u30C8\u3092\u5165\u529B\u307E\u305F\u306F\u8CBC\u308A\u4ED8\u3051\u3066\u304F\u3060\u3055\u3044
 
-guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
-guiLanguageManagerDialog=Language Module Manager
+enterText2 = \u3053\u3053\u306B\u30C1\u30A7\u30C3\u30AF\u3059\u308B\u30C6\u30AD\u30B9\u30C8\u3092\u633F\u5165\u3057\u3066\u304F\u3060\u3055\u3044
 
-guiMatchCount = Potential errors:
+eo = \u30A8\u30B9\u30DA\u30E9\u30F3\u30C8\u8A9E
 
-guiMenuAbout = &About...
+errorContext = \u6587\u8108:
 
-guiMenuAddRules = Load &Rule File
+errorMessage = \u30E1\u30C3\u30BB\u30FC\u30B8:
 
-guiMenuCheckClipboard = &Check Text in Clipboard
+es = \u30B9\u30DA\u30A4\u30F3\u8A9E
 
-guiMenuFile = &File
+false_friend = \u7A7A\u4F3C\u8A00\u8449
 
-guiMenuHelp = &Help
+false_friend_desc = \u7A7A\u4F3C\u8A00\u8449\u306E\u30D2\u30F3\u30C8:
 
-guiMenuHide = &Hide to System Tray
+false_friend_hint = \u30D2\u30F3\u30C8: "{0}" ({1}) \u306F {2} ({3}) \u3092\u610F\u5473\u3059\u308B
 
-guiMenuOpen = &Open...
+false_friend_suggestion = {0}\u3068\u3044\u3046\u610F\u5473\u3067\u3059\u304B?
 
-guiMenuOptions = Option&s...
+fr = \u30D5\u30E9\u30F3\u30B9\u8A9E
 
-guiMenuQuit = &Quit
+gl = \u30AC\u30EA\u30B7\u30A2\u8A9E
 
-guiMenuShowMainWindow = Open Main Window
+guiAddButton=\u8FFD\u52A0...
+guiCancelButton = \u30AD\u30E3\u30F3\u30BB\u30EB
 
-guiMotherTongue = Your mother tongue:
+guiCheckComplete = LanguageTool\u306E\u30C1\u30A7\u30C3\u30AF\u306F\u5B8C\u4E86\u3057\u307E\u3057\u305F\u3002
+guiCloseButton=\u9589\u3058\u308B
 
-guiNoErrorsFound = No errors or warnings found (language: {0})
+guiConfigWindowTitle = LanguageTool\u306E\u30AA\u30D7\u30B7\u30E7\u30F3
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language: {0})
+guiDemoText = \u3053\u308C\u306FLanguageTool\u306E\u6A5F\u80FD\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306E\u5165\u529B\u306E\u4F8B\u3067\u3059\u3002
+guiLanguageManagerDialog=\u8A00\u8A9E\u30E2\u30B8\u30E5\u30FC\u30EB\u30DE\u30CD\u30FC\u30B8\u30E3
+
+guiMatchCount = \u6F5C\u5728\u7684\u306A\u30A8\u30E9\u30FC:
+
+guiMenuAbout = &LanguageTool\u306B\u3064\u3044\u3066
+
+guiMenuAddRules = &\u30EB\u30FC\u30EB\u30D5\u30A1\u30A4\u30EB\u306E\u30ED\u30FC\u30C9
+
+guiMenuCheckClipboard = &\u30AF\u30EA\u30C3\u30D7\u30DC\u30FC\u30C9\u306E\u30C6\u30AD\u30B9\u30C8\u3092\u30C1\u30A7\u30C3\u30AF
+
+guiMenuFile = &\u30D5\u30A1\u30A4\u30EB
+
+guiMenuHelp = &\u30D8\u30EB\u30D7
+
+guiMenuHide = &\u30B7\u30B9\u30C6\u30E0\u30C8\u30EC\u30A4\u306B\u96A0\u3059
+
+guiMenuOpen = &\u958B\u304F
+
+guiMenuOptions = &\u30AA\u30D7\u30B7\u30E7\u30F3
+
+guiMenuQuit = &\u7D42\u4E86
+
+guiMenuShowMainWindow = \u30E1\u30A4\u30F3\u30A6\u30A3\u30F3\u30C9\u30A6\u3092\u958B\u304F
+
+guiMotherTongue = \u3042\u306A\u305F\u306E\u6BCD\u56FD\u8A9E:
+
+guiNoErrorsFound = \u30A8\u30E9\u30FC\u307E\u305F\u306F\u8B66\u544A\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F (\u8A00\u8A9E: {0})
+
+guiNoErrorsFoundSelectedText = \u9078\u629E\u3057\u305F\u30C6\u30AD\u30B9\u30C8\u3067\u306F\u30A8\u30E9\u30FC\u307E\u305F\u306F\u8B66\u544A\u306F\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F (\u8A00\u8A9E: {0})
 
 guiOKButton = &OK
 
-guiOOoChangeButton = &Change
+guiOOoChangeButton = &\u5909\u66F4
 
-guiOOoCloseButton = Close
+guiOOoCloseButton = \u9589\u3058\u308B
 
-guiOOoIgnoreAllButton = Ignore All
+guiOOoIgnoreAllButton = \u3059\u3079\u3066\u7121\u8996
 
-guiOOoIgnoreButton = Ignore
+guiOOoIgnoreButton = \u7121\u8996
 
-guiOOoOptionsButton = Options...
+guiOOoOptionsButton = \u30AA\u30D7\u30B7\u30E7\u30F3
 
-guiProgressWindowTitle = LanguageTool: Checking Text...
+guiProgressWindowTitle = LanguageTool: \u30C6\u30AD\u30B9\u30C8\u306E\u30C1\u30A7\u30C3\u30AF
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle = Replace text
+guiRemoveButton=\u524A\u9664
+guiReplaceWindowTitle = \u30C6\u30AD\u30B9\u30C8\u306E\u7F6E\u63DB
 
-guiReplaceWithOtherText = <other text>
+guiReplaceWithOtherText = <\u4ED6\u306E\u30C6\u30AD\u30B9\u30C8>
 
-guiRunOnPort = Run as server on po&rt
+guiRunOnPort = &\u30DD\u30FC\u30C8\u4E0A\u3067\u30B5\u30FC\u30D0\u30FC\u3068\u3057\u3066\u5B9F\u884C
 
-guiSelectionCheckComplete = LanguageTool check of selected text is complete.
+guiSelectionCheckComplete = \u9078\u629E\u3055\u308C\u305F\u30C6\u30AD\u30B9\u30C8\u306ELanguageTool\u306E\u30C1\u30A7\u30C3\u30AF\u306F\u5B8C\u4E86\u3057\u307E\u3057\u305F\u3002
 
-guiTagText = &Tag Text
+guiTagText = &\u30C6\u30AD\u30B9\u30C8\u306B\u30BF\u30B0\u4ED8\u3051\u3059\u308B
 
-incorrect_case = This sentence does not start with an uppercase letter
+incorrect_case = \u3053\u306E\u6587\u306F\u5927\u6587\u5B57\u3067\u59CB\u307E\u3063\u3066\u3044\u307E\u305B\u3093
 
-is = Icelandic
+is = \u30A2\u30A4\u30B9\u30E9\u30F3\u30C9\u8A9E
 
-it = Italian
+it = \u30A4\u30BF\u30EA\u30A2\u8A9E
 
-km = Khmer
+km = \u30AF\u30E1\u30FC\u30EB\u8A9E
 
-lt = Lithuanian
+lt = \u30EA\u30C8\u30A2\u30CB\u30A2\u8A9E
 
-missing_space_after_comma = Put a space after the comma
+missing_space_after_comma = \u30AB\u30F3\u30DE\u306E\u5F8C\u306B\u30B9\u30DA\u30FC\u30B9\u3092\u5165\u308C\u308B
 
-ml = Malayalam
+ml = \u30DE\u30E9\u30E4\u30FC\u30E9\u30E0\u8A9E
 
-nl = Dutch
+nl = \u30AA\u30E9\u30F3\u30C0\u8A9E
 
-no_space_after = Don't put a space after the opening parenthesis
+no_space_after = \u958B\u304D\u62EC\u5F27\u306E\u5F8C\u306B\u30B9\u30DA\u30FC\u30B9\u3092\u5165\u308C\u306A\u3044\u3067\u304F\u3060\u3055\u3044
 
-no_space_before = Don't put a space before the closing parenthesis
+no_space_before = \u9589\u3058\u62EC\u5F27\u306E\u524D\u306B\u30B9\u30DA\u30FC\u30B9\u3092\u5165\u308C\u306A\u3044\u3067\u304F\u3060\u3055\u3044
 
-no_space_before_dot = Don't put a space before the full stop
+no_space_before_dot = \u30D4\u30EA\u30AA\u30C9\u306E\u524D\u306B\u30B9\u30DA\u30FC\u30B9\u3092\u5165\u308C\u306A\u3044\u3067\u304F\u3060\u3055\u3044
 
-pl = Polish
+pl = \u30DD\u30FC\u30E9\u30F3\u30C9\u8A9E
 
-repetition = Possible typo: you repeated a word
+repetition = \u53EF\u80FD\u6027\u306E\u3042\u308B\u8AA4\u5B57: \u8A00\u8449\u3092\u7E70\u308A\u8FD4\u3057\u305F
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. \u884C {1}, \u5217 {2}</b><br>
 
-resultAreaText = Results will appear here
+resultAreaText = \u7D50\u679C\u304C\u3053\u3053\u306B\u8868\u793A\u3055\u308C\u307E\u3059
 
-resultTime = <br>Time: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>\u6642\u9593: {0}ms<br>
 
-ru = Russian
+ru = \u30ED\u30B7\u30A2\u8A9E
 
-sk = Slovak
+sk = \u30B9\u30ED\u30D0\u30AD\u30A2\u8A9E
 
-sl = Slovenian
+sl = \u30B9\u30ED\u30D9\u30CB\u30A2\u8A9E
 
-space_after_comma = Put a space after the comma, but not before the comma
+space_after_comma = \u30B3\u30F3\u30DE\u306E\u524D\u3067\u306F\u306A\u304F\u3001\u30B3\u30F3\u30DE\u306E\u5F8C\u306B\u30B9\u30DA\u30FC\u30B9\u3092\u5165\u308C\u3066\u304F\u3060\u3055\u3044
 
-startChecking = Starting check in {0}
+spelling = \u53EF\u80FD\u6027\u306E\u3042\u308B\u3064\u3065\u308A\u306E\u9593\u9055\u3044\u304C\u898B\u3064\u304B\u308A\u307E\u3057\u305F
 
-sv = Swedish
+startChecking = {0} \u306E\u30C1\u30A7\u30C3\u30AF\u3092\u958B\u59CB
 
-tl = Tagalog
+sv = \u30B9\u30A6\u30A7\u30FC\u30C7\u30F3\u8A9E
 
-textLanguage = Text Language:
+tl = \u30BF\u30AC\u30ED\u30B0\u8A9E
 
-two_commas = Two consecutive commas
+textLanguage = \u30C6\u30AD\u30B9\u30C8\u306E\u8A00\u8A9E:
 
-two_dots = Two consecutive dots
+two_commas = \uFF12\u3064\u306E\u9023\u7D9A\u3059\u308B\u30B3\u30F3\u30DE
 
-uk = Ukrainian
+two_dots = \uFF12\u3064\u306E\u9023\u7D9A\u3059\u308B\u30C9\u30C3\u30C8
 
-unpaired_brackets = Unpaired bracket or similar symbol
+uk = \u30A6\u30AF\u30E9\u30A4\u30CA\u8A9E
 
-whitespace_repetition = Possible typo: you repeated a whitespace
+unpaired_brackets = \u5BFE\u306B\u306A\u3063\u3066\u3044\u306A\u3044\u62EC\u5F27\u3068\u305D\u308C\u306B\u985E\u4F3C\u3059\u308B\u8A18\u53F7
 
-ro = Romanian
+useGUIConfig = \u30B5\u30FC\u30D0\u30FC\u7528\u306B\u4E0A\u8A18\u306E\u8A2D\u5B9A\u3092\u4F7F\u7528
 
-zh = Chinese
+whitespace_repetition = \u53EF\u80FD\u6027\u306E\u3042\u308B\u8AA4\u5B57: \u7A7A\u767D\u3092\u7E70\u308A\u8FD4\u3057\u305F
 
-ja = Japanese
+ro = \u30EB\u30FC\u30DE\u30CB\u30A2\u8A9E
+
+zh = \u4E2D\u56FD\u8A9E
+
+moreInfo = \u8A73\u7D30\u60C5\u5831:
+
+pt = \u30DD\u30EB\u30C8\u30AC\u30EB\u8A9E
+
+pt-BR = \u30DD\u30EB\u30C8\u30AC\u30EB\u8A9E (\u30D6\u30E9\u30B8\u30EB)
+
+pt-PT = \u30DD\u30EB\u30C8\u30AC\u30EB\u8A9E (\u30DD\u30EB\u30C8\u30AC\u30EB) 
+
+guiWarning = \u8B66\u544A
+
+guiDuplicate = \u30EB\u30FC\u30EB\u30D5\u30A1\u30A4\u30EB\u3092\u8907\u88FD!
+
+ja = \u65E5\u672C\u8A9E
