--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -69,6 +69,8 @@ desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
 desc_spelling = Possible spelling mistake
 
+desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+
 desc_spelling_short = Spelling mistake
 
 double_dots_short = Two consecutive dots
