[br] updated CHANGES.txt for Breton.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -13,6 +13,8 @@ LanguageTool Change Log
    -the internal spelling engine can now additionally tokenize words if the
     source dictionary did not include compound versions (for example,
     hyphenated words).
+  - updated classification of words tagged as plural nouns of persons
+    (these have different mutation than other nouns).
 
  -Esperanto:
    -several new rules and fixed false alarms
