--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -37,6 +37,9 @@ LanguageTool Change Log
    -several rule updates (Marco A.G.Pinto)
 
 
+ -introduced a file resources/<lang>/hunspell/ignore.txt with words that the spell checker
+  will ignore
+
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
  -HTTP API: "+" was incorrectly removed from input (sf bug #3543914), patch by
