update text for suggestion extraction

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -44,6 +44,9 @@ LanguageTool Change Log
   want to re-generate the ignore.txt files, populated with suggestions from the grammar files.
   In other words, this makes sure "simple" suggestions (i.e. those without back references) made
   by the LanguageTool rules are never considered spelling mistakes.
+  If you have downloaded the stand-alone ZIP of LanguageTool, call this command for the
+  same effect:
+  java -cp LanguageTool.jar org.languagetool.rules.spelling.SuggestionExtractor
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
