[sv] re-enable Swedish

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -36,6 +36,9 @@ LanguageTool Change Log
  -Portuguese:
    -several rule updates (Marco A.G.Pinto)
 
+ -Swedish:
+   -Support for Swedish has been re-enabled after it had been disabled in LanguageTool 1.7.
+
 
  -introduced a file resources/<lang>/hunspell/ignore.txt with words that the spell checker
   will ignore
