stand-alone GUI: copy and paste from the result area now keeps line breaks (Sourceforge bug #3554842) - does not work for Linux "select + middle button click" copy and paste style

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -53,8 +53,11 @@ LanguageTool Change Log
 
  -stand-alone GUI: rules can now be disabled and enabled again with a single click
 
- -HTTP API: "+" was incorrectly removed from input (sf bug #3543914), patch by
+ -HTTP API: "+" was incorrectly removed from input (Sourceforge bug #3543914), patch by
   Sourceforge user hiddenspirit
+
+ -stand-alone GUI: copy and paste from the result area now keeps line breaks (Sourceforge
+  bug #3554842)
 
 
 1.8 (2012-06-30)
