only write those terms to the ignore.txt files that the spellchecker would actually complain about - makes the files shorter and thus easier to check manually

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -44,7 +44,8 @@ LanguageTool Change Log
   will ignore
 
  -development: new ant target generate-ignore-files: call "ant generate-ignore-files" if you
-  want to re-generate the ignore.txt files, populated with suggestions from the grammar files.
+  want to re-generate the ignore.txt files, populated with those suggestions from the grammar
+  files that the spell checker would complain about.
   In other words, this makes sure "simple" suggestions (i.e. those without back references) made
   by the LanguageTool rules are never considered spelling mistakes.
   If you have downloaded the stand-alone ZIP of LanguageTool, call this command for the
